--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "friendsfinder",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "node js app",
+  "main": "server.js",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tababycatz/FriendsFinder.git"
   },
+  "keywords": [
+    "node"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tababycatz/FriendsFinder/issues"
   },
-  "homepage": "https://github.com/tababycatz/FriendsFinder#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "path": "^0.12.7"
-  }
+  "homepage": "https://github.com/tababycatz/FriendsFinder#readme"
 }
